# Yield-Sensei

./: .env.example  .env.template  .eslintrc.js  .gitignore  ARCHITECTURE.md  BRANCHING_STRATEGY.md  CLAUDE.md  DATABASE_SCHEMA.md  README.md  SECURITY_AND_STANDARDS_REVIEW.md  docker-compose.yml  env.template  jest.config.js  package-lock.json  package.json  security-assessment-report.md  security-audit-report.json  test-framework-validation.js  tsconfig.build.json  tsconfig.json  tsconfig.typecheck.json  yield_sensei_PRD.txt
.cursor/: mcp.json
.github/: CODEOWNERS  README.md  branch-protection.json  notification-config.json  pr-requirements.yml
.husky/: pre-commit.disabled
.serena/: project.yml
.taskmaster/: config.json  state.json
deployment/: docker-compose.prod.yml
docs/: API_REFERENCE.md  CROSS_DATABASE_INTEGRATION.md  DATABASE_SCHEMA.md  DATABASE_TESTING_FRAMEWORK.md  DEPLOYMENT.md  ENVIRONMENT_CONFIGURATION.md  INTEGRATION_TESTING.md  README.md  USER_GUIDE.md  (+6 more)
src/core/orchestration/state/: Cargo.toml  README.md  build.sh  cache.ts  engine.rs  lib.rs  wrapper.ts
src/satellites/aegis/: Cargo.toml  README.md  aegis-satellite.ts  lib.rs
src/satellites/aegis/data/: mod.rs  price_feed_integration.rs
src/satellites/aegis/intelligence/: mod.rs  risk_intelligence.rs
src/satellites/aegis/liquidation/: health_calculators.rs  mod.rs  monitor.rs
src/satellites/aegis/monitoring/: alert_system.rs  mod.rs
src/satellites/aegis/risk/: correlation_analysis.rs  mod.rs  position_manager.rs  price_impact.rs
src/satellites/aegis/security/: audit_database.rs  bytecode_analyzer.rs  exploit_monitor.rs  mev_protection.rs  mod.rs  real_time_scanner.rs  transaction_monitor.rs  vulnerability_detector.rs
src/satellites/aegis/simulation/: mod.rs  stress_testing.rs  tests.rs  visualization.rs
src/satellites/aegis/types/: mod.rs
(+808 files in other folders)
