[package]
name = "aegis-satellite"
version = "0.1.0"
edition = "2021"

[lib]
name = "aegis_satellite"
path = "lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.0"
rust_decimal = { version = "1.0", features = ["serde-float"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
log = "0.4"
rand = "0.8"
rand_distr = "0.4"
regex = "1.0"

[dev-dependencies]
tokio-test = "0.4"